# R2D2-as-real-AI-companion

./: .gitignore  000_AGENT_CORE_RULES.md  000_AGENT_FINALIZATION_GUIDE.md  000_INTERNAL_AGENT_NOTES.md  000_UX_AND_FUNCTIONS.md  001_ARCHITECTURE_OVERVIEW.md  002_HARDWARE_GPU_ACCELERATION.md  002_HARDWARE_REFERENCE.md  002_HOW_TO_INSTRUCT_AI_AGENT.md  002_HOW_TO_INSTRUCT_CLAUDE.md  003_JETSON_FLASHING_AND_DISPLAY_SETUP.md  004_BACKUP_AND_RESTORE.md  004_SPEAKER_AUDIO_SETUP_DOCUMENTATION.md  005_SERVICES_AND_NODES.md  005_SYSTEMD_SERVICES_REFERENCE.md  006_OPTIMIZATION_ANALYSIS.md  006_SYSTEM_STATUS_AND_MONITORING.md  007_GPU_ACCELERATION_REFERENCE.md  007_OVERALL_SYSTEM_MAP.md  007_SYSTEM_INTEGRATION_REFERENCE.md  008_JETSON_OPTIMIZATION_GUIDE.md  009_PROJECT_EFFORT_ANALYSIS.md  009_SYSTEM_INTEGRATION_TROUBLESHOOTING.md  00_INTERNAL_AGENT_NOTES.md  00_READ_ME_ANALYSIS_COMPLETE.md  010_PERSON_RECOGNITION_STATUS.md  011_CAMERA_SETUP_DOCUMENTATION.md  011_SYSTEM_SECURITY.md  012_SPEAKER_AUDIO_SETUP_DOCUMENTATION.md  012_VPN_SETUP_AND_REMOTE_ACCESS.md  012_VPN_SETUP_TAILSCALE.md  020_CAMERA_SETUP_DOCUMENTATION.md  020_POWER_BUTTON_FINAL_DOCUMENTATION.md  02_CAMERA_SETUP_DOCUMENTATION.md  030_PERCEPTION_PIPELINE_SETUP.md  040_FACE_RECOGNITION_COMPLETE.md  041_CAMERA_SETUP_DOCUMENTATION.md  04_FACE_DETECTION_SETUP.md  04_FACE_RECOGNITION_INTEGRATION.md  050_AUDIO_SETUP_AND_CONFIGURATION.md  (+236 more)
_ANALYSIS_AND_DOCUMENTATION/: AAA_DEBUG_FACE_DETECTION_SMOOTHING.md  AUDIO_DOCS_MANIFEST.txt  AUDIO_QUICK_REFERENCE.md  AUTO_START_IMPLEMENTATION_COMPLETE.md  COMPREHENSIVE_FIX_PLAN.md  COMPUTE_COST_ANALYSIS.md  CORRECT_J511_PINOUT.md  DOCUMENTATION_CHANGES_VISUAL_GUIDE.md  FINAL_STATUS_REPORT.md  GESTURE_SYSTEM_ACTIVATION.md  GESTURE_SYSTEM_GO_LIVE.md  GESTURE_SYSTEM_IMPLEMENTATION_GUIDE.md  INSTALLATION_VERIFIED.md  INTEGRATION_GUIDE.md  PERSON_ENTITY_MANAGEMENT_COMPLETE.md  PLAN_VS_IMPLEMENTATION_COMPARISON.md  README.md  REMOVE_HARDCODED_SEVERIN_IMPLEMENTATION_COMPLETE.md  REMOVE_HARDCODED_SEVERIN_PLAN.md  huge_overall_system_map_goal.md  red_status_stability_analysis.md
_ARCHIVE/: 007_SYSTEM_INTEGRATION_REFERENCE.md  008_SYSTEM_INTEGRATION_QUICK_START.md  020_POWER_BUTTON_FINAL_DOCUMENTATION.md  100_PERSON_RECOGNITION_REFERENCE.md  101_PERSON_RECOGNITION_INSTALLATION.md  102_PERSON_RECOGNITION_QUICK_START.md  265_LED_Installation_old.md  270_LED_EXPANSION_BOARD_GUIDE_old.md  270_LED_INSTALLATION_MCP23017_FAILED.md  303_GESTURE_TRAINING_GUIDE.md  LED_SYSTEM_SUMMARY_MCP23017.md  README.md  TEMP_DISCREPANCIES_AND_RECOMMENDATIONS.md
_ARCHIVED_AUDIO_DOCS_v1/: AUDIO_NOTIFICATION_COMPLETE_DOCUMENTATION.md  AUDIO_NOTIFICATION_QUICK_START.md  AUDIO_NOTIFICATION_SYSTEM.md  AUDIO_SETUP_SUMMARY.md  README_AUDIO_NOTIFICATION_SERVICE.md
_ARCHIVED_FACE_RECOGNITION_DOCS_v1/: 06_FACE_RECOGNITION_TRAINING_AND_STATUS.md
_TEMP/: 010_PROJECT_GOALS_AND_SETUP.md  SYSTEM_FLOW_DIAGRAM.md
_temp/: CRITICAL_ISSUE_REPORT.md  READY_FOR_REBOOT.md  REBUILD_VERIFICATION_REPORT.md  START_SEQUENCE_ANALYSIS.md  SUCCESS_REPORT.md
archive/: 205_QUICK_START.md  206_CONFIGURATION_DECISIONS_AND_CLARIFICATIONS.md
data/: coding_context.json  coding_live.md  narrator_mode.txt  persons.db
docker/: Dockerfile.humble.txt  docker compose.yml
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
r2d2_llm/: CMakeLists.txt
r2d2_llm/config/: params.yaml
r2d2_llm/launch/: tts_stt_launch.py
r2d2_llm/src/r2d2_llm/: stt_node.py  tts_node.py
r2d2_speech/: IMPLEMENTATION_CHECKLIST.md  QUICK_START_SUBTASK1.md  SUBTASK1_COMPLETE.md  __init__.py  (+10 more)
ros2_ws/src/r2d2_audio/: package.xml  setup.cfg  setup.py  test_audio_notification.py
ros2_ws/src/r2d2_audio/config/: audio_params.yaml  r2d2-volume-control.service
ros2_ws/src/r2d2_audio/launch/: all_audio_services.launch.py  audio_notification.launch.py  gpio_status_led.launch.py  mcp23017_status_led.launch.py
ros2_ws/src/r2d2_audio/msg/: PersonStatus.msg
ros2_ws/src/r2d2_audio/r2d2_audio/: __init__.py  audio_beep_node.py  audio_notification_node.py  audio_player.py  database_logger_node.py  gpio_status_led_node.py  mcp23017_status_led_node.py  status_led_node.py  volume_control_node.py
ros2_ws/src/r2d2_audio/test/: BASELINE_RESULTS.md  test_adc_calibration.py  test_volume_baseline.py
ros2_ws/src/r2d2_audio/test/test_results/: baseline_20251227.json
ros2_ws/src/r2d2_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/r2d2_camera/launch/: camera.launch.py  camera_stream.launch.py
ros2_ws/src/r2d2_camera/r2d2_camera/: camera_node.py  camera_stream_node.py
ros2_ws/src/r2d2_common/: package.xml  setup.py
ros2_ws/src/r2d2_common/r2d2_common/: person_config.py
ros2_ws/src/r2d2_gesture/: package.xml  setup.cfg  setup.py
ros2_ws/src/r2d2_gesture/launch/: gesture_intent.launch.py
ros2_ws/src/r2d2_gesture/r2d2_gesture/: gesture_intent_node.py
ros2_ws/src/r2d2_head_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/r2d2_head_control/config/: r2d2-tilt-tracking.service  tilt_tracking_params.yaml
ros2_ws/src/r2d2_head_control/launch/: tilt_tracking.launch.py
ros2_ws/src/r2d2_head_control/r2d2_head_control/: __init__.py  pid_controller.py  servo_driver.py  tilt_tracking_node.py
ros2_ws/src/r2d2_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/r2d2_interfaces/srv/: SetVolume.srv
ros2_ws/src/r2d2_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/r2d2_perception/launch/: perception.launch.py  perception_launch.py
ros2_ws/src/r2d2_perception/r2d2_perception/: __init__.py  image_listener.py  perception_node.py
ros2_ws/src/r2d2_perception/resource/: r2d2_perception
ros2_ws/src/r2d2_speech/: package.xml  setup.cfg  setup.py
ros2_ws/src/r2d2_speech/config/: speech_params.yaml
ros2_ws/src/r2d2_speech/launch/: intelligent_speech_node.launch.py  rest_speech_node.launch.py  speech_node.launch.py
ros2_ws/src/r2d2_speech/r2d2_speech/: ros2_bridge.py  speech_node.py
ros2_ws/src/r2d2_speech/r2d2_speech_ros/: __init__.py  intelligent_speech_node.py  rest_speech_node.py  ros2_bridge.py  speech_node.py
(+346 files in other folders)
