<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2d2_audio</name>
  <version>0.1.0</version>
  <description>R2D2 audio output module for speaker playback and beep generation</description>
  <maintainer email="severin@r2d2.local">Severin</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/severinleuenberger/R2D2-as-real-AI-companion</url>
  <url type="bugtracker">https://github.com/severinleuenberger/R2D2-as-real-AI-companion/issues</url>

  <author email="severin@r2d2.local">Severin</author>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
